trying to fix the modal on mobile

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -196,10 +196,10 @@
         background-color: #000;
     }
     
-    .modal-background{
+    /* .modal-background{
         width: 100%;
         max-width: 1000px;
-    }
+    } */
 
     .skillTitle{
         margin-top: 50px;
@@ -309,10 +309,10 @@
         background-color: #000;
     }
 
-    .modal-background{
+    /* .modal-background{
         width: 100%;
         max-width: 1000px;
-    }
+    } */
 
     .skillTitle{
         margin-top: 50px;
